# nkustcourse

./: .gitignore  LICENSE  README.md
portfolio_ana/: llm_analyzer.py  pyproject.toml  (+2 more)
smartinvest/: evaluate_form.md  finalprj.md  main.py  pyproject.toml  verify_change_fields.py  verify_db.py
smartinvest/part0_setup_and_git/unit1_dev_env_and_git/: README.md  slide1_what_is_dev_env.md  slide2_intro_to_git.md  slide3_basic_git_commands.md  slide4_reverting_changes.md  slide5_git_for_course.md
smartinvest/part0_setup_and_git/unit2_python_uv_setup/: README.md  slide1_what_is_uv.md  slide2_installing_uv.md  slide3_creating_virtual_env.md  slide4_installing_packages.md
smartinvest/part1_python_review/unit1_core_syntax/: README.md  example1_data_types.py  example2_flow_control.py  example3_functions_modules.py  part1_unit1_sp_answer.py  part1_unit1_summary_prj.txt  slide1_data_types.md  slide2_data_structures.md  slide3_flow_control.md  slide4_functions_modules.md
smartinvest/part1_python_review/unit2_oop/: README.md  example1_class_object.py  example2_inheritance.py  example3_polymorphism.py  part1_unit2_sp_answer.py  part1_unit2_summary_prj.txt  slide1_why_oop.md  slide2_class_object.md  slide3_inheritance.md  slide4_polymorphism.md
smartinvest/part1_python_review/unit3_exceptions/: README.md  example1_try_except.py  example2_raise_exception.py  example3_custom_exception.py  part1_unit3_sp_answer.py  part1_unit3_summary_prj.txt  slide1_why_exceptions.md  slide2_try_except.md  slide3_finally_raise.md  slide4_custom_exceptions.md
smartinvest/templates/: index.html
(+187 files in other folders)
